<resources>
    <string name="app_name">Enterprise</string>
    <string name="post_jobs_w">Post Jobs</string>
    <string name="slide_1_desc">you can add part time jobs and receive applicants to work at your enterprise</string>
    <string name="view_and_select_applicants">VIEW &amp; SELECT APPLICANTS</string>
    <string name="slide_two_desc">you can view applicants work records including their total hours worked, tasks accomplished and evaluations from previous enterprises prior accepting them. this feature provide the level of adherence to work for each applicants</string>
    <string name="chat_with_application">CHAT WITH APPLICANTS</string>
    <string name="slide_three_desc">you can chat with applicants prior accepting them for an interview</string>
    <string name="add_working_schedule">ADD WORKING SCHEDULE</string>
    <string name="slide_four_desc">you can add a fixed/flexible working schedule along with the ability to update the schedule weekly. in addition, you can chat with workers included in the schedule to obtain agreement on the work time prior approval</string>
    <string name="add_and_evaluates_programs">ADD &amp; EVALUATE TASKS</string>
    <string name="slide_five_desc">you can add continuos and time bounded tasks along with evaluating those tasks upon completion. this feature allow the enterprise to obtain better performance by its workers since it will be stored among their work records</string>
    <string name="view_worker_profiles">VIEW WORKER PROFILES</string>
    <string name="slide_six_desc">you can view workers profiles and know their performance at work</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_denied">Storage permission denied. You can enable permission from settings</string>
    <string name="prmission_alert">App needs this permission to store files on phone\'s storage. Are you sure you want
        to deny this permission ?
    </string>
    <string name="camera_permission">App needs this permission to capture photos using phone\'s camera. Are you sure you
        want to deny this permission ?
    </string>
    <string name="location_permission">App needs this permission to access your location. Are you sure you want to deny
        this permission ?
    </string>
    <string name="grants">Grant</string>
    <string name="deny">Deny</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">FORGOT?</string>
    <string name="jobs">Jobs</string>
    <string name="nav_message">Message</string>
    <string name="nav_jobs">Jobs</string>
    <string name="nav_workers">Workers</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_setting">Settings</string>
    <string name="applicatnts_ss">Applicants</string>
    <string name="description">Description</string>
    <string name="closed">Closed</string>
    <string name="add_jobs">Add Jobs</string>
    <string name="job_title">Job title</string>
    <string name="part_time_type">Part time type</string>
    <string name="prev">Preview</string>
    <string name="submit">Submit</string>
    <string name="maximum_number_of_applicant_apply">Maximum number of applicants can apply</string>
    <string name="flexible">Flexible</string>
    <string name="job_description_required">Job Description Required</string>
    <string name="same_for_all_days">Same for all days</string>
    <string name="work_network">Work network</string>
    <string name="location">Location</string>
    <string name="branch_name">Branch name</string>
    <string name="currency">Currency</string>
    <string name="hourly_rate">Hourly rate</string>
    <string name="total_hour_per_week">Total hours per week</string>
    <string name="mins">Min</string>
    <string name="maxs">Max</string>
    <string name="requirements">Requirements</string>
    <string name="benifits">Benefits(Optional)</string>
    <string name="work_guidelines">Work Guidelines</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="or">OR</string>
    <string name="ors">OR</string>
    <string name="edit_jobs_me">Edit Jobs</string>
    <string name="open_me">Open</string>
    <string name="keep_future">Close but keep for future</string>
    <string name="job_preview">Job Preview</string>
    <string name="job_detail">Job Details</string>
    <string name="details_s1">Details</string>
    <string name="no_of_applicnts">Applicants</string>
    <string name="your_application_list_is_empty">Your applicants list is empty</string>
    <string name="accepted_for_interview">Accepted for an interview</string>
    <string name="accept_for_interview">Accept for an interview</string>
    <string name="final_acceptance">Final Acceptance</string>
    <string name="work_experience">Work Experience</string>
    <string name="nationality">Nationality</string>
    <string name="education_level">Education level</string>
    <string name="applied_on">Applied on</string>
    <string name="enterprise_id">Enterprise id</string>
    <string name="enterprise_name">Enterprise name</string>
    <string name="enterprise_category_industry">Enterprise category/industry</string>
    <string name="general_info">General info</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="save">Save</string>
    <string name="sub_users">Sub Users</string>
    <string name="account_settings">Account settings</string>
    <string name="logout_me">Logout</string>
    <string name="title_notifications">Notifications</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="enter_user_name">Please Enter user name</string>
    <string name="no_more_days_added">No more days are added.</string>
    <string name="please_add_images">Please add images.</string>
    <string name="please_enter_parttime_type">Please enter part time type.</string>
    <string name="please_enter_job_desc">Please enter job description.</string>
    <string name="please_enter_job_location">Please enter job location.</string>
    <string name="please_enter_branch">Please enter branch.</string>
    <string name="please_enter_currency">Please enter currency.</string>
    <string name="please_enter_hourly_rates">Please enter Hourly Rate.</string>
    <string name="please_enter_total_hour_per_work"> Please enter total hour per week.</string>
    <string name="please_enter_maximum_number_of_applicant">Please enter maximum no of applicant.</string>
    <string name="please_enter_hours_of_experience">Please enter hours of experience.</string>
    <string name="please_enter_user_name">Please enter user name.</string>
    <string name="please_enter_job_requirements">Please enter job requirements.</string>
    <string name="please_enter_work_guidelines">Please enter work guideline.</string>
    <string name="please_enter_enterpriseName"> Please enter EnterpriseName.</string>
    <string name="please_select_categories">Please select category.</string>
    <string name="please_enter_generalinfo">Please enter general info.</string>
    <string name="please_enter_emailid">Please enter Email ID.</string>
    <string name="please_pass_not_match"> Password does not match</string>
    <string name="please_enter_conf_pass">Please enter Confirm Password</string>
    <string name="password_must_not_be_empty">Password must be not empty</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="error_generic">Something went wrong.</string>
    <string name="empty_car_images">Please select at least one image.</string>
    <string name="mimum_images_require">Please add atleast one work picture</string>
    <string name="enter_Job_Title">Please enter job title.</string>
    <string name="branch_name_required">Please enter branch name </string>
    <string name="select_currency">Please choose currency</string>
    <string name="hourly_rate_select">Select Hourly Rate</string>
    <string name="please_select_parttimetype">Please Select PartTime Type</string>
    <string name="please_select_currency">Please Select Currency</string>
    <string name="please_select_hourly_rate">Please Select Hourly Rate</string>
    <string name="select_hour_of_week">No more days are added.</string>
    <string name="edt_hourly_rate">Enter Hourly Rate</string>
    <string name="hourly_rayte_week_select">Select Hourly week</string>
    <string name="maximul_applicants">Please Enter Maximum Applicants</string>
    <string name="seek_bar_err">Select Your Of Exp. Through Range</string>
    <string name="err_requirements">Please enter Job Requirements</string>
    <string name="err_work_guidelines">Please enter work Guidelines</string>
    <string name="prev_requirements">Requirements</string>
    <string name="job_location_required">Valid Job Location Required</string>
    <string name="benefits_msg">Benefits</string>
    <string name="prev_working_hours">Working hours</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete the Job ? </string>
    <string name="wify_user_name">Please enter work network username</string>
    <string name="logout_message">Are you sure, you want to logout?</string>
    <string-array name="day">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="email_id_validation">Please enter your email ID</string>
    <string name="passaword_validation_login">Please enter your password</string>
    <string name="your_joblist_is_empty">You have not added any jobs yet</string>
    <string name="err_picture">Please add atleast one work picture</string>
    <string name="err_Jobtitle">Please enter Job title</string>
    <string name="err_partitime_type">Please choose Part time type</string>
    <string name="err_jobdesc">Please enter Job description</string>
    <string name="err_jobLoc"> Please enter Job location</string>
    <string name="err_jobcurrency">Please choose currency</string>
    <string name="err_range_hour">Please choose hour range</string>
    <string name="err_enter_hourly_rate">Please enter hourly rate</string>
    <string name="err_total_workinghours">Please choose total hours per week</string>
    <string name="err_no_ofapplicant">Please enter maximum number of applicants</string>
    <string name="err_specyfyhours">Please specify Working hours</string>
    <string name="err_valid_startendtime">Please enter the valid start time and end time</string>
    <string name="err_workinghours_off_all_days"> Please enter working hours for all days</string>
    <string name="err_wifyUserName">Please enter work network username</string>
    <string name="err_wifyUserpass">Please enter work network password</string>
    <string name="err_job_requirement">Please enter Job Requirements</string>
    <string name="search">Search</string>
    <string name="cancel_s">CANCEL</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="select_language">Select Language</string>
    <string name="apply">Apply</string>
    <string name="change_language">Change Language</string>
    <string name="done">Done</string>
    <string name="task">Task</string>
    <string name="reset">Reset</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="education_levels">Education Level</string>
    <string name="loc_by_radious">Location by Radius</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="no_search_result">Search for candidates</string>
    <string name="wokiking_history_hours">Working hour history</string>
    <string name="evolutions">Evaluation</string>
</resources>