<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:background="@android:color/transparent"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/shadow_bg_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/txt_languageDialogTitle"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/sp_14"
                android:text="@string/select_language"
                android:textColor="@color/text_bg"
                android:gravity="center_vertical|center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"/>

        <LinearLayout
                android:gravity="start"
                android:orientation="vertical"
                android:layout_margin="@dimen/dp_35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioGroup
                    android:id="@+id/language_radioGrp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:checked="true"
                        android:id="@+id/rd_english"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <RadioButton
                        android:layout_marginTop="@dimen/dp_4"
                        android:id="@+id/rd_arabic"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/arabic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </RadioGroup>

            <LinearLayout
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/dialog_lang_cancel"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/cancel_s"
                        android:layout_weight="1"
                        android:background="@color/design_default_color_error"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/dialog_lang_apply"
                        android:layout_marginStart="@dimen/dp_2"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/apply"
                        android:layout_weight="1"
                        android:background="@color/btn_bg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>