<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/parrent_view_ll"
            android:paddingStart="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/shadow_bg_two">

        <LinearLayout
                android:gravity="start|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

            <ImageView
                    android:id="@+id/accountSettingbck"
                    android:background="@drawable/ic_back_add_jobs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:visibility="visible"
                    android:background="@drawable/search_edit_bg"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:id="@+id/ll_inputSearch"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_35">

                <EditText
                        android:textAlignment="viewStart"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginEnd="@dimen/dp_7"
                        android:textSize="@dimen/sp_10"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/custom_header_title"
                        android:hint="@string/search"
                        android:layout_weight=".60"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableStart="@drawable/search"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="25"
                        android:background="@null"
                        android:id="@+id/input_messageSearch"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                />

                <ImageView
                        android:id="@+id/cancel_SearchbgMsg"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:background="@drawable/cross"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    

        <HorizontalScrollView
                android:id="@+id/ll_searchFilterView"
                android:scrollbars="none"
                android:layout_below="@+id/parrent_view_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


            <Button
                    android:layout_margin="@dimen/dp_5"
                    android:padding="@dimen/dp_5"
                    android:id="@+id/btnJobTitle"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    android:text="@string/job_title"
                    android:textSize="@dimen/sp_14"
                    android:fontFamily="@font/montserrat_regular"
                    android:background="@color/divider"
                    android:textColor="@color/setting_page_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/btnJobWorkHistory"
                        android:padding="@dimen/dp_5"
                        android:layout_margin="@dimen/dp_5"
                        android:textAllCaps="false"
                        android:text="@string/wokiking_history_hours"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/btnSearchGender"
                        android:padding="@dimen/dp_5"
                        android:layout_margin="@dimen/dp_5"
                        android:textAllCaps="false"
                        android:text="@string/gender"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/btnSearchAge"
                        android:padding="@dimen/dp_5"
                        android:layout_margin="@dimen/dp_5"
                        android:textAllCaps="false"
                        android:text="@string/age"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/btnNationality"
                        android:padding="@dimen/dp_5"
                        android:layout_margin="@dimen/dp_5"
                        android:textAllCaps="false"
                        android:text="@string/nationality"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/btnEducationLevel"
                        android:padding="@dimen/dp_5"
                        android:layout_margin="@dimen/dp_5"
                        android:textAllCaps="false"
                        android:text="@string/education_levels"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                <Button
                        android:id="@+id/btnLocByRadious"
                        android:padding="@dimen/dp_5"
                        android:layout_margin="@dimen/dp_5"
                        android:textAllCaps="false"
                        android:text="@string/loc_by_radious"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/btnLocTask"
                        android:padding="@dimen/dp_5"
                        android:layout_margin="@dimen/dp_5"
                        android:textAllCaps="false"
                        android:text="@string/task"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_medium"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button
                        android:layout_margin="@dimen/dp_5"
                        android:padding="@dimen/dp_5"
                        android:id="@+id/btnEvolution"
                        android:textAllCaps="false"
                        android:visibility="visible"
                        android:text="@string/evolutions"
                        android:textSize="@dimen/sp_14"
                        android:fontFamily="@font/montserrat_regular"
                        android:background="@drawable/btn_effect"
                        android:textColor="@color/setting_page_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

        </HorizontalScrollView>


    <LinearLayout
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_below="@+id/ll_searchFilterView"
            android:layout_above="@+id/view_bottom"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/searchReset"
                android:visibility="gone"
                android:gravity="start|center_vertical"
                android:textSize="@dimen/sp_16"
                android:text="@string/reset"
                android:layout_marginTop="@dimen/dp_15"
                android:fontFamily="@font/montserrat_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/dp_5"
                android:id="@+id/filter_recycleView"
                android:visibility="gone"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/filter_searchView"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
                android:visibility="visible"
                android:id="@+id/ll_empty_list_home"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:background="@drawable/search_emptystate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:gravity="center"
                    android:textSize="@dimen/sp_16"
                    android:text="@string/no_search_result"
                    android:layout_marginTop="@dimen/dp_45"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

    </LinearLayout>


    



    <LinearLayout
            android:id="@+id/view_bottom"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_margin="@dimen/dp_10"
                android:id="@+id/btn_AppSearchFilter"
                android:textAllCaps="false"
                android:textColor="@color/app_white"
                android:text="@string/apply_filter"
                android:textSize="@dimen/sp_16"
                android:fontFamily="@font/montserrat_semibold"
                android:background="@drawable/btn_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>

</RelativeLayout>